--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -28,4 +28,4 @@ jobs:
         run: php artisan migrate --env=testing --force
 
       - name: Run Tests
-        run: php artisan test --filter ResponseTest
+        run: php artisan test 
